# r2dt-client

./: .cookiecutter.json  .flake8  .gitignore  .pdm-python  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
src/r2dt_client/: __init__.py  __main__.py
src/r2dt_client/cache/: cache.py  cache_item.py
src/r2dt_client/client/: client.py
src/r2dt_client/commands/: __init__.py  draw.py
src/r2dt_client/entities/: __init__.py  exceptions.py  format.py  job.py
src/r2dt_client/session/: __init__.py  client.py  session.py
src/r2dt_client/session/entities/: __init__.py  cache_item.py  job.py  job_status.py
src/r2dt_client/session/services/: cache.py
src/r2dt_client/widgets/: widget.py
tests/: __init__.py  test_main.py
