[project]
name = "r2dt-client"
version = "0.1.11"
description = "R2DT API Client"
authors = [
    { name = "Alexey Naiden", email = "r2dt@anaiden.ru" },
]
dependencies = [
    "diskcache<6.0.0,>=5.6.3",
    "httpx<1.0.0,>=0.26.0",
    "yarl<2.0.0,>=1.9.4",
    "ipython",
    "ipywidgets",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
]

[project.license]
text = "Apache-2.0"

[project.urls]
Changelog = "https://github.com/anayden/r2dt-client/releases"
homepage = "https://github.com/anayden/r2dt-client"
repository = "https://github.com/anayden/r2dt-client"

[tool.pdm]
distribution = "true"

[tool.pdm.packages]
include = ["src/r2dt_client"]
packages = {include = ["r2dt_client"], from = "src"}

[tool.pdm.dev-dependencies]
dev = [
    "jupyter<2.0.0,>=1.0.0",
]
test = [
    "pytest",
]

[tool.pdm.scripts]
test = "pytest"

[tool.pdm.build]
includes = []

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
